--- a/homepage/templates/app_base.htm
+++ b/homepage/templates/app_base.htm
@@ -41,6 +41,7 @@
                     <li><a href="/about/">About</a></li>
                     <li><a href="/contact/">Contact</a></li> 
                     <li><a href="/sections/">Sections</a></li>
+                    <li><a href="/faq/">FAQ</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
