--- a/homepage/styles/base.css
+++ b/homepage/styles/base.css
@@ -5,3 +5,13 @@
 .navbar {
     margin-bottom: 0px;
 }
+
+.Site {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+  
+  .Site-content {
+    flex: 1;
+  }
