--- a/homepage/templates/base.htm
+++ b/homepage/templates/base.htm
@@ -20,14 +20,14 @@
         <link rel="icon" type="image/gif" href="https://media.giphy.com/media/FMnVZzDALopvG/giphy.gif">
 
     </head>
-    <body>
+    <body class="Site">
         <%block name="construction"></%block>
 
         <header>
             <%block name="navbar"></%block>
         </header>
 
-        <main>
+        <main class="Site-content">
             <div class="container-fluid">
                 <%block name="content"></%block>
             </div>
